--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /Lab2/dist/
 /Lab2/nbproject/private/
 /Lab2/build/
+/Lab3/NoaaProject/dist/
+/Lab3/NoaaProject/nbproject/private/
+/Lab3/NoaaProject/build/
