--- a/Lab3/NoaaProject/nbproject/private/private.properties
+++ b/Lab3/NoaaProject/nbproject/private/private.properties
@@ -1,3 +1,8 @@
 compile.on.save=true
-file.reference.gson-2.10.1.jar=C:\\Users\\culle\\Documents\\NetBeansProjects\\NoaaProject\\gson-2.10.1.jar
-user.properties.file=C:\\Users\\culle\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\ambd1\\AppData\\Roaming\\NetBeans\\15\\build.properties
