--- a/Lab3/NoaaProject/nbproject/project.properties
+++ b/Lab3/NoaaProject/nbproject/project.properties
@@ -35,10 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/NoaaProject
 endorsed.classpath=
 excludes=
+file.reference.gson-2.10.jar=Jarlib\\gson-2.10.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.Gson.classpath}
+    ${file.reference.gson-2.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -74,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=NoaaProject
-main.class=
+main.class=noaaproject.Noaa
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
