--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /Lab3/NoaaProject/dist/
 /Lab3/NoaaProject/nbproject/private/
 /Lab3/NoaaProject/build/
+/Lab4Team2/build/
+/Lab4Team2/nbproject/private/
