--- a/Lab4Team2/nbproject/private/private.properties
+++ b/Lab4Team2/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/Users/leo/Library/Application Support/NetBeans/12.6/build.properties
+user.properties.file=C:\\Users\\phill\\AppData\\Roaming\\NetBeans\\15\\build.properties
