--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /Lab3/NoaaProject/dist/
 /Lab3/NoaaProject/nbproject/private/
 /Lab3/NoaaProject/build/
+/Lab4Team2/nbproject/private/
 /Lab4Team2/build/
 /Lab4Team2/dist/
 /Lab4Team2/Diary.txt
